// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Atoms/Links & Buttons ActiveTab smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <button delay="0.29371404638882936"
          class="inline-block border-2 border-orange-600 bg-orange-600 text-black uppercase text-2xl font-black px-4 py-2 hover:bg-orange-100 hover:text-orange-600 hover:border-orange-600 mb-1 bg-orange-100 text-black"
  >
    conturbo calco
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Button smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <button class="undefined inline-block border-2 border-orange-600 bg-orange-600 text-black uppercase text-2xl font-black px-4 py-2 hover:bg-orange-100 hover:text-orange-600 hover:border-orange-600"
          style="font-family: &quot;Bebas Neue&quot;, cursive;"
  >
    subito circumvenio
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Inline smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <a class="underline hover:text-orange-600 hover:no-underline"
     href="https://impeccable-reconsideration.com/"
  >
    suspendo decens
  </a>
</div>
`;

exports[`Atoms/Links & Buttons LinkButton smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <a class="inline-block border-2 border-orange-600 bg-orange-600 text-black uppercase text-2xl font-black px-4 py-2 hover:bg-orange-100 hover:text-orange-600 hover:border-orange-600"
     href="https://insignificant-wear.net"
  >
    calamitas ipsa
  </a>
</div>
`;

exports[`Atoms/Links & Buttons Motion smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <button delay="0.3431780161508694">
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      d
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      n
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      i
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      q
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      &nbsp;
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      c
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      r
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      c
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      i
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      a
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      m
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      n
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      t
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      m
    </span>
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Protected smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <a href="#">
    atque exercitationem
  </a>
</div>
`;

exports[`Atoms/Links & Buttons Tab smoke-test 1`] = `
<div class="bg-black text-orange-100  font-sans">
  <button delay="0.3229589138531782"
          class="inline-block border-2 border-orange-600 bg-orange-600 text-black uppercase text-2xl font-black px-4 py-2 hover:bg-orange-100 hover:text-orange-600 hover:border-orange-600 mb-1"
  >
    perferendis suppono
  </button>
</div>
`;
